Fix overflow issues on main page (#99)

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -80,10 +80,9 @@ th,
   position: fixed;
   top: 25px;
   left: 70px;
-  height: calc(100% - 130px);
   padding-right: 100px;
   scroll-behavior: auto;
-  overflow: scroll;
+  bottom: 15px;
 }
 
 .icon {
@@ -181,4 +180,15 @@ th,
   &-lightblue {
     background-color: $blue-100;
   }
+}
+
+.border-top {
+  border-top: 1px solid #eceeef !important;
+}
+.border-left {
+  border-left: 1px solid #eceeef;
+}
+
+.vscroll {
+  overflow-y: auto; 
 }
